--- a/Phi_3_5_mini_instruct.ipynb
+++ b/Phi_3_5_mini_instruct.ipynb
@@ -35,7 +35,11 @@
         "!pip install transformers==4.43.0\n",
         "!pip install gradio==4.36.1\n",
         "from IPython.display import clear_output\n",
-        "clear_output()"
+        "clear_output()\n",
+        "import time\n",
+        "time.sleep(5)\n",
+        "import os\n",
+        "os.kill(os.getpid(), 9)"
       ],
       "metadata": {
         "cellView": "form",
@@ -88,7 +92,7 @@
         "import gc\n",
         "torch.random.manual_seed(0)\n",
         "import subprocess\n",
-        "\n",
+        "import time\n",
         "def is_gpu_memory_over_limit(limit_gb=14.5):\n",
         "    # Run nvidia-smi and capture the output\n",
         "    result = subprocess.run(['nvidia-smi', '--query-gpu=memory.used', '--format=csv,nounits,noheader'],\n",
@@ -124,7 +128,7 @@
         "    print(\"Free GPU memeory\")\n",
         "  except:\n",
         "    pass\n",
-        "\n",
+        "  time.sleep(2)\n",
         "  model = AutoModelForCausalLM.from_pretrained(\n",
         "    \"microsoft/Phi-3.5-mini-instruct\",\n",
         "    device_map=\"cuda\",\n",
@@ -156,15 +160,17 @@
         "\n",
         "  output = pipe(messages, **generation_args)\n",
         "  response=output[0]['generated_text']\n",
-        "  return response\n",
+        "  return response.strip()\n",
         "\n",
         "model,tokenizer=load_model()\n",
         "\n",
         "def run_phi(system_role,user_msg):\n",
         "  global model,tokenizer\n",
-        "  if is_gpu_memory_over_limit():\n",
+        "  print(f\"System Role:{system_role}\\nuser Message:{user_msg}\")\n",
+        "  if is_gpu_memory_over_limit(14):\n",
         "    tokenizer,model=load_model()\n",
         "  phi_reply=phi_Chat(system_role,user_msg)\n",
+        "  print(f\"Response:{phi_reply}\")\n",
         "  return phi_reply\n",
         "\n",
         "\n",
@@ -175,7 +181,7 @@
         "cellView": "form",
         "id": "BjISfWyRGXxe"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -183,35 +189,35 @@
       "source": [
         "#@title Test Phi-3.5-mini-instruct\n",
         "system_role= \"You are a helpful AI assistant.\"  # @param {type: \"string\"}\n",
-        "user_msg = \"shut up\"  # @param {type: \"string\"}\n",
+        "user_msg = \"5 bird name\"  # @param {type: \"string\"}\n",
         "llama_reply=run_phi(system_role,user_msg)\n",
         "from IPython.display import clear_output\n",
         "clear_output()\n",
-        "llama_reply"
+        "print(llama_reply)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 140
         },
         "cellView": "form",
         "id": "VJSlxiW-JAcg",
-        "outputId": "dea5be4a-b25a-496a-ff27-3ced7baea0ab"
+        "outputId": "781f6fe9-0750-4beb-f339-629fba85e154"
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\" I'm Phi, an AI, and I'm here to help you with any questions or information you need. Please feel free to ask your questions.\""
+              "'Here are five bird names, each representing a different species:\\n\\n1. American Robin (Turdus migratorius) - Known for its bright orange-red breast and melodious song, the American Robin is a common sight in gardens and parks across North America.\\n\\n2. Peregrine Falcon (Falco peregrinus) - This bird is renowned for being the fastest animal in the world, capable of reaching speeds over 200 mph during its characteristic high-speed dive, known as a stoop, when hunting for prey.\\n\\n3. African Grey Parrot (Psittacus erithacus) - Famous for its exceptional intelligence and ability to mimic human speech, the African Grey Parrot is a highly sought-after pet and is native to the rainforests of West and Central Africa.\\n\\n4. Emperor Penguin (Aptenodytes forsteri) - The largest of all living penguin species, the Emperor Penguin is native to Antarctica and is known for its impressive size, striking black and white plumage, and unique breeding behavior, where males incubate the eggs on their feet during the harsh winter.\\n\\n5. Andean Condor (Vultur gryphus) - This large, soaring bird is native to the Andes Mountains in South America and is known for its impressive wingspan, which can reach up to 3.3 meters (10.8 feet). The Andean Condor is a symbol of power and longevity in many Andean cultures.'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 24
         }
       ]
     },
@@ -232,45 +238,8 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 611
-        },
         "cellView": "form",
-        "id": "EV8QTkt-MdML",
-        "outputId": "0e2cb695-2177-4070-9e6d-2800b21fcc2c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "Running on public URL: https://a3c8319d81f568c94b.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://a3c8319d81f568c94b.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yBqwup8wM_LY"
+        "id": "EV8QTkt-MdML"
       },
       "execution_count": null,
       "outputs": []
@@ -280,6 +249,15 @@
       "source": [],
       "metadata": {
         "id": "n68MJ_5UM_Ig"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b-_3M8pUgxft"
       },
       "execution_count": null,
       "outputs": []
@@ -304,11 +282,47 @@
         "demo.launch(share=True)"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 611
+        },
         "cellView": "form",
-        "id": "dbVrezeyMmyl"
+        "id": "dbVrezeyMmyl",
+        "outputId": "e277c0e1-a94a-4db0-c793-06648e1aee7f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "Running on public URL: https://f02a99b1f3ea872241.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://f02a99b1f3ea872241.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     }
   ]
 }
