--- a/Phi_3_5_mini_instruct.ipynb
+++ b/Phi_3_5_mini_instruct.ipynb
@@ -189,7 +189,7 @@
       "source": [
         "#@title Test Phi-3.5-mini-instruct\n",
         "system_role= \"You are a helpful AI assistant.\"  # @param {type: \"string\"}\n",
-        "user_msg = \"5 bird name\"  # @param {type: \"string\"}\n",
+        "user_msg = \"Who are you?\"  # @param {type: \"string\"}\n",
         "llama_reply=run_phi(system_role,user_msg)\n",
         "from IPython.display import clear_output\n",
         "clear_output()\n",
@@ -197,27 +197,20 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
         "id": "VJSlxiW-JAcg",
-        "outputId": "781f6fe9-0750-4beb-f339-629fba85e154"
+        "outputId": "b24e4d7c-985e-4b02-da53-9b51da4ec72b"
       },
-      "execution_count": 24,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Here are five bird names, each representing a different species:\\n\\n1. American Robin (Turdus migratorius) - Known for its bright orange-red breast and melodious song, the American Robin is a common sight in gardens and parks across North America.\\n\\n2. Peregrine Falcon (Falco peregrinus) - This bird is renowned for being the fastest animal in the world, capable of reaching speeds over 200 mph during its characteristic high-speed dive, known as a stoop, when hunting for prey.\\n\\n3. African Grey Parrot (Psittacus erithacus) - Famous for its exceptional intelligence and ability to mimic human speech, the African Grey Parrot is a highly sought-after pet and is native to the rainforests of West and Central Africa.\\n\\n4. Emperor Penguin (Aptenodytes forsteri) - The largest of all living penguin species, the Emperor Penguin is native to Antarctica and is known for its impressive size, striking black and white plumage, and unique breeding behavior, where males incubate the eggs on their feet during the harsh winter.\\n\\n5. Andean Condor (Vultur gryphus) - This large, soaring bird is native to the Andes Mountains in South America and is known for its impressive wingspan, which can reach up to 3.3 meters (10.8 feet). The Andean Condor is a symbol of power and longevity in many Andean cultures.'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am Phi, created by Microsoft. I'm an AI digital assistant designed to help answer questions and provide information to the best of my ability.\n"
+          ]
         }
       ]
     },
