--- a/Phi_3_5_mini_instruct.ipynb
+++ b/Phi_3_5_mini_instruct.ipynb
@@ -45,7 +45,7 @@
         "cellView": "form",
         "id": "mc7gLJLEEZxu"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "id": "wrkIqzSnFlhw",
         "outputId": "cd351934-f8d7-4fb3-b29e-2dc55bd0de22"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -181,7 +181,7 @@
         "cellView": "form",
         "id": "BjISfWyRGXxe"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         "id": "VJSlxiW-JAcg",
         "outputId": "b24e4d7c-985e-4b02-da53-9b51da4ec72b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,8 +225,8 @@
         "import gradio as gr\n",
         "gradio_examples = [[\"You are a helpful AI assistant.\",\"Who are you?\"]]\n",
         "gradio_input=[gr.Textbox(label=\"System Role\"),gr.Textbox(label=\"User Message\")]\n",
-        "gradio_output=[gr.Textbox(label=\"Hermes-3-Llama-3.1-8B Response\")]\n",
-        "gradio_interface = gr.Interface(fn=run_phi, inputs=gradio_input,outputs=gradio_output , title=\"Hermes-3-Llama-3.1-8B\",examples=gradio_examples)\n",
+        "gradio_output=[gr.Textbox(label=\"Phi-3.5 Mini Instruct Response\")]\n",
+        "gradio_interface = gr.Interface(fn=run_phi, inputs=gradio_input,outputs=gradio_output , title=\"Phi-3.5 Mini Instruct\",examples=gradio_examples)\n",
         "gradio_interface.queue().launch(share=True,debug=Debug,auth=(username, password))\n",
         "\n"
       ],
@@ -283,7 +283,7 @@
         "id": "dbVrezeyMmyl",
         "outputId": "e277c0e1-a94a-4db0-c793-06648e1aee7f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
