--- a/Phi_3_5_mini_instruct.ipynb
+++ b/Phi_3_5_mini_instruct.ipynb
@@ -168,7 +168,7 @@
         "  global model,tokenizer\n",
         "  print(f\"System Role:{system_role}\\nuser Message:{user_msg}\")\n",
         "  if is_gpu_memory_over_limit(14):\n",
-        "    tokenizer,model=load_model()\n",
+        "   model,tokenizer=load_model()\n",
         "  phi_reply=phi_Chat(system_role,user_msg)\n",
         "  print(f\"Response:{phi_reply}\")\n",
         "  return phi_reply\n",
